--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 		<div id="result">
 		</div>
 		<div id="footer">
+			<div style="color: yellow">!!! THE INFORMATION PROVIDED IS NOT FINANCIAL ADVICE !!!</div>
 			<div>
 				<a href="https://coinmarketcap.com/" target="_blank">CoinMarketCap</a> | 
 				<a href="https://accounts.binance.com/en/register?ref=QIPY0Z6V" target="_blank">Binance</a> |
