--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 			}
 		</script>
 		<title>How much &#8383; should you own?</title>
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 	<body>
 		<div class="element">
