--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 					'<div class="primary">Your goal should be to own <span class="currencySign">&#8383;</span>' + goalBtc + '</div>' + 
 					"<div>The investment above will cost you " + curr((goalBtc * btcPrice)) + " today</div><br/>" +
 
-					'<div>To be in the top 2% of BTC-Hodlers, you need <span class="currencySign">&#8383;</span>' + topTwoPercentBtc + " (" + curr(topTwoPercentBtc * btcPrice) + " today)</div>" + 
+					'<div>To be in the top 2% of BTC-Hodlers, you need <span class="currencySign">&#8383;</span>' + topTwoPercentBtc + " (" + curr(topTwoPercentBtc * btcPrice) + " today)</div><br/>" + 
 	
 					'<div class="primary">A whole Bitcoin costs ' + curr(btcPrice) + ' today</div>'
 				  };
