--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			}
 			#result {
 				margin-top: 40px;
+				margin-bottom: 120px;
 			}
 			#footer {
 				position: fixed;
@@ -44,6 +45,7 @@
 				width: 100%;
 				padding: 20px;
 				color:#888;
+				background-color: #282923;
 			}
 			#donate {
 				z-index: 9999;
@@ -263,7 +265,7 @@
 		<div id="result">
 		</div>
 		<div id="footer">
-			<div style="color: yellow; margin: 20px">!!! THE INFORMATION PROVIDED IS NOT FINANCIAL ADVICE !!!</div>
+			<div style="color: yellow; margin-bottom: 20px">!!! THE INFORMATION PROVIDED IS NOT FINANCIAL ADVICE !!!</div>
 			<div>
 				<a href="https://coinmarketcap.com/" target="_blank">CoinMarketCap</a> | 
 				<a href="https://accounts.binance.com/en/register?ref=QIPY0Z6V" target="_blank">Binance</a> |
